# Gamer-Deedz-Engine

./: CMakeLists.txt  Game_Engine_Roadmap.docx  README.md  ~$me_Engine_Roadmap.docx  ~WRL0003.tmp
src/: Button.cpp  Button.hpp  Engine.cpp  Engine.hpp  EntityManager.cpp  EntityManager.hpp  InputManager.cpp  InputManager.hpp  Main.cpp  SideBar.cpp  SideBar.hpp  quick.java
src/Components/: Color.hpp  Position.hpp  Transform.hpp  UserInput.hpp  Velocity.hpp
src/Entities/: EntityManager.cpp  EntityManager.hpp
src/SystemBase/: ColorSystem.cpp  ColorSystem.hpp  Engine.cpp  Engine.hpp  MovementSystem.cpp  MovementSystem.hpp  RenderSystem.cpp  RenderSystem.hpp  Systems.hpp
src/Systems/: Movement.cpp  MovementSystem.cpp  MovementSystem.hpp  Systems.hpp
src/UI/: Button.hpp  ButtonDefinitions.cpp  ButtonDefinitions.hpp  SideBar.cpp
